Show URLs with % encoded linebreaks correctly in the statusbar.

BUG:228849